styles/home.css
body{
    background-color: #252A36;
    background-image: url("/sources/images/background.png");
    background-size: 100%;
    background-repeat: no-repeat;
    font-family: sans-serif;
    background-position: inherit;
    height: 200vh;
}

nav{
    display: flex;
    background-color: #252a36c9;
    align-items: center;
    height: 75px;
    width: 1520px;
    margin-top: -5px;
    margin-left: -10px;
    font-weight: bold;
    font-size:larger;
    position: fixed;
    transition: top 0.3s;
}

nav h3{
    color: #6C9EFF;
}
nav span{
    color: white;
}
nav a{
    color: white;
    text-decoration: none;
    margin: 10px; 
}
.navbar-collapse{
    display: flex;
    margin-left: 58%;
}.navbar-collapse a {
    color: white;
    text-decoration: none;
    margin: 10px;
    position: relative;
}

.navbar-collapse a::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: -5px;
    left: 0;
    background-color: white;
    visibility: hidden;
    transform: scaleX(0);
    transition: all 0.3s ease-in-out;
}

.navbar-collapse a:hover::before {
    visibility: visible;
    transform: scaleX(1);
}

nav img{
    width: 50px;
    margin:10px;
    margin-left: 4%;
}
.desc-box{
   position: relative;
   color: white;
   z-index: -1; 
}
.desc-box h1{
    font-size: 70px;
    font-weight: bold;
    color: #6C9EFF;
}
.desc-box span{
    color: #ffffff;
}
.desc-box p{
    margin-top: -2%;
    width: 450px;
    font-size: large;
}
.desc-box img{
    width: 35%;
    position: absolute;
    top: -100px;
    margin-left: 17%;
    transform: translateX(-50%);
    z-index: -1; 
}
.desc-form{
padding-top: 12%;
margin-left: 3%;

}
button {
    background-color: rgba(108, 157, 255, 0); /* Warna latar belakang tidak transparan */
    border: 2px solid white;
    color: white;
    padding: 10px 20px;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease;
    
}

button:hover {
    background-color: rgba(108, 157, 255, 0.6); /* Ubah opasitas saat dihover */
    
}


body .desc-vector{
    display: flex;
    justify-content: flex-end;
}
body .desc-vector img{
    margin:14% -18%;
    width: 40%;
}
body .form-why{
    margin-left: 5%;
}
.form-why{
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: 35%;
    color: white;
}
.form-why span{
    color: #4682B4;
}
.form-desc{
    display: flex;
    flex-direction: column;
    margin-top: -3%;
}
.form-desc p{
    width: 550px;
    margin-top: -2%;
}
.form-logo{
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: 0%;
    color: white;
    margin-left: 30%;
    margin-bottom: 5%;
}
.form-logo-desc{
    display: flex;
    flex-direction: column;
    margin-top: -3%;
}
.form-logo-desc span{
    color: #4682B4;
}
.form-logo-desc p{
    width: 550px;
    margin-top: -2%;
}
.form-logo img{
    width: 30%;
    margin-top: -2%;
    margin-left: 10%;
}
footer{
    display: flex;
}
.form-footer{
    display: flex;
    color: white;
    margin-top: -4%;
    flex-direction: column;
}
.form-footer p{
    margin-left: 80px;
    margin-top: -3%;
    font-size: 25px;
}
.form-footer p span{
    color: #4682B4;
}
.footer-logo{
    display: flex;
    align-items: center;
    margin: 6%;
    margin-top: 50px;
    font-size: 20px;
}
.footer-logo img{
    width: 150px;
    margin-left: 11%;
}
.footer-logo span{
    color: #4682B4;
    margin-left: 5%;
}
footer .social-media{
    color: white;
    font-size: large;
    font-weight: bold;
    display: flex;
    margin-top: 40px;
    margin-left: 30%;
    flex-direction: column;
}
footer .a-link{
    margin-top: -15%;
    margin-left: -10px;
}
footer .a-link a{
    margin-left: 10px;
}

